# MANIM

./: .gitignore  README.md  ai_coding_guidelines.txt  build_windows.bat  build_windows_installer.bat  pyproject.toml  run.sh  start.bat  start.command  start.ps1  start.sh
config/: security.yaml
scripts/: generate_keys.py
src/manim_app/: __init__.py  main.py
src/manim_app/core/: config.py  container.py  crypto.py  validation.py
src/manim_app/models/: customer.py  insurance.py
src/manim_app/repositories/: audit_repository.py  customer_repository.py  db_pool.py  insurance_repository.py  schema.py
src/manim_app/services/: csv_import_service.py  customer_service.py  insurance_service.py
src/manim_app/ui/: main_window.py  tasks.py
tests/: test_config_runtime_env.py  test_crypto.py  test_csv_import_service.py  test_services.py  test_validation.py
tools/windows/: MANIM.spec  build.bat  build.ps1  installer.iss
